--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
+    <meta property="og:url" content="https://unischool.pages.dev/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="至青宇宙学校" />
+    <meta
+      property="og:description"
+      content="心灵的觉醒之路
+    "
+    />
+    <meta
+      property="og:image"
+      content="https://unichool.pages.dev/img/logo.png"
+    />
+
     <link
       rel="icon"
       type="image/png"
