debug og:image url

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://unichool.pages.dev/img/logo.png"
+      content="https://unischool.pages.dev/img/logo.png"
     />
 
     <link
